[gd_scene load_steps=4 format=3 uid="uid://dr4siug6i7yc6"]

[ext_resource type="Script" path="res://Scenes/player/scenes/player_bullet.gd" id="1_07aoa"]
[ext_resource type="Texture2D" uid="uid://j7a0nyb11qtw" path="res://Scenes/player/sprite/bullet2.png" id="1_l4naw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7k050"]
radius = 8.0

[node name="player_bullet" type="Area2D"]
script = ExtResource("1_07aoa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_7k050")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
texture = ExtResource("1_l4naw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
